# workshop-agents

./: .pre-commit-config.yaml  README.md
Session-1/: README.md
Session-1/ADK/: README.md  pyproject.toml
Session-1/ADK/agents/first_agent/: agent.py
Session-1/ADK/agents/loop_agent/: agent.py  commons.py
Session-1/ADK/agents/orchestrator_agent/: agent.py  commons.py
Session-1/ADK/agents/parallel_agent/: agent.py  commons.py
Session-1/ADK/agents/sequential_agent/: agent.py
Session-1/ADK/agents/tutorial/: agent.py
Session-1/genkit/: README.md  package-lock.json  package.json
Session-1/genkit/prompts/: search_videos.prompt  search_videos_2.prompt
Session-2/: README.md
Session-2/UI/: Dockerfile  deploy-ui.sh  pyproject.toml
Session-2/UI/src/: ui_main.py
Session-2/barista-agent-system/: Dockerfile  README.md  deploy-agent.sh  main.py  pyproject.toml  start.sh
Session-2/barista-agent-system/MCP-Server/: README.md
Session-2/barista-agent-system/MCP-Server/menu_mcp/: Dockerfile  deploy-mcp.sh  pyproject.toml  server.py
Session-2/barista-agent-system/agents/creative_director_agent/: __init__.py  agent.py
Session-2/barista-agent-system/agents/creative_director_agent/prompts/: prompts.yaml
Session-2/barista-agent-system/agents/creative_director_agent/tools/: image_coffee_tools.py  menu_tools.py  promotions_tools.py
Session-2/barista-agent-system/agents/head_barista_agent/: __init__.py  agent.py
Session-2/barista-agent-system/agents/head_barista_agent/prompts/: prompts.yaml
Session-2/barista-agent-system/agents/head_barista_agent/tools/: availability_check_tools.py  menu_tools.py
Session-2/barista-agent-system/agents/market_analyst_agent/: __init__.py  agent.py
Session-2/barista-agent-system/agents/market_analyst_agent/prompts/: load_prompts.py  prompts.yaml
Session-2/barista-agent-system/agents/market_analyst_agent/tools/: start-mcp-toolbox-server.sh  tools.yaml
Session-2/barista-agent-system/agents/orchestrator_agent/: agent.py
Session-2/barista-agent-system/agents/orchestrator_agent/prompts/: prompts.yaml
Session-2/barista-agent-system/agents/orchestrator_agent/tools/: common_tools.py  memory_tools.py
Session-2/pipeline-data-ingestion-menu/: Dockerfile  README.md  deploy-pipeline-ingestion.sh  pyproject.toml
Session-2/pipeline-data-ingestion-menu/resources/: menu.md
Session-2/pipeline-data-ingestion-menu/src/: ingestion_menu.py
(+14 files in other folders)
