[tool.poetry]
name = "menu-mcp"
version = "0.1.0"
description = ""
authors = ["jggomez <juan.gomez01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-firestore = "^2.21.0"
python-dotenv = "^1.2.1"
mcp = "^1.22.0"
google-genai = "^1.52.0"
fastmcp = "^2.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
